--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,16 @@ h1, h2, h3, h4, h5, h6, p, a {
   color: white
 }
 
+p {
+  font-family: Nixie One;
+  font-weight:
+}
+
 .btn {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0px;
-  font-family: Arial;
+  font-family: Alfa Slab One;
   color: #f58b0a;
   font-size: 15px;
   background: #1e1d24;
